tests/sksl/errors/Ossfuzz37469.asm.frag
### Compilation failed:

error: array must have a size
1 error
